# AgentOrchestra

./: .coverage  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
agents/: agents.yaml  profiles.json
config/: workmode.yaml.deprecated
docs/: COMMON_ERRORS.md  REVIEW_REPORT_v0.8.1.md  REVIEW_REPORT_v0.8.1_round2.md  agent-configuration.md  api-reference.md  architecture-analysis.md  security-audit-2026-03.md  simulate_architectures.py  skill-development.md  task-queue-100.md
orchestrator/: langgraph_hub.py
prompts/: IDE_PROMPT_WORKFLOW.md  current-antigravity.txt  current-builder.txt  current-codex.txt  current-reviewer.txt  current-windsurf.txt
runtime/: good-builder.md  reviewer-output.txt
scripts/: codex_exec_agent.py  emit_ide_prompt.py  ide_hub.py  lockctl.py  mock_cli_agent.py  mvp_ctl.py  queue-runner.py  smoke_mvp.sh  workmode_ctl.py  workmode_demo.sh
specs/: skill.schema.json  state-machine.yaml  task.schema.json
task-templates/: api-endpoint.yaml  auth.yaml  bugfix.yaml  crud.yaml  refactor.yaml  test.yaml
templates/: builder.md.j2  reviewer.md.j2
tests/: test_cli_admin.py  test_cli_cancel.py  test_cli_decompose.py  test_cli_decompose_unit.py  test_cli_done.py  test_cli_go.py  test_cli_helpers.py  test_cli_history.py  test_cli_new_commands.py  test_cli_queue.py  test_cli_status.py  test_cli_watch.py  test_cli_watch_unit.py  test_codex_exec_agent.py  test_config.py  test_contract.py  test_dashboard.py  test_decompose.py  test_driver.py  test_finops.py  test_git_ops.py  test_graph.py  test_graph_agent_ids.py  test_integration.py  (+19 more)
(+64 files in other folders)
